<com.example.renhao.wevolunteer.view.FractionTranslateLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:ptrHeaderBackground="#ffeaebeb">
    </com.amap.api.maps.MapView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:background="@drawable/btn_login"
            android:text="@string/btn_sign_in_scan"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:visibility="visible"/>
        <Button
            android:id="@+id/btn_sign_in_num"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:background="@drawable/btn_login"
            android:text="@string/btn_sign_in_num"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:visibility="visible"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:background="@drawable/btn_login"
        android:text="@string/btn_sign_out"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/time_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/btn_sign_out"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/bg_single_time"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="签到时间"
            android:textColor="@color/colorOrange"
            android:textSize="18sp"/>

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:format="HH:MM:SS"
            android:textColor="@color/colorOrange"
            android:textSize="18sp"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_warn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/time_layout"
        android:gravity="center"
        android:background="@color/colorTransparentWhite"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/warn"/>

        <TextView
            android:id="@+id/tv_warn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_warn"
            android:textColor="@color/colorRed"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:marqueeRepeatLimit="marquee_forever"/>
    </LinearLayout>




</com.example.renhao.wevolunteer.view.FractionTranslateLayout>
